<resources>
    <string name="app_name">FDeditor</string>

    <string name="action_settings">Tool</string>
    <string name="command_undo">Undo</string>
    <string name="command_redo">Redo</string>
    <string name="command_clear">Clear</string>

    <string name="tool_gluon">Gluon</string>
    <string name="tool_strateline">Strate Line</string>
    <string name="tool_photon">Photon</string>
    <string name="tool_arrowedline">Arrowed</string>
    <string name="tool_normalvertex">NVertex</string>
    <string name="tool_countervertex">Counter</string>
    <string name="tool_choose">Choose</string>
    <string name="tool_dashedline">Dashed</string>
    <string name="tool_arrowdashedline">ArrowD</string>
    <string name="tool_doubleline">DoubleLine</string>
    <string name="tool_arroweddoubleline">ArrowedDL</string>
    <string name="tool_select">Select</string>

    <string name="operations_delete">Delete</string>
    <string name="lineoperations_ConvertToline">Convert to line</string>
    <string name="lineoperations_ConvertToArc">Convert to arc</string>
    <string name="lineoperations_flip">Flip</string>
    <string name="lineoperations_split">Split</string>
    <string name="lineoperations_split_2">2 Segments</string>
    <string name="lineoperations_split_3">3 Segments</string>
    <string name="lineoperations_split_4">4 Segments</string>

    <string name="mainActivityTile">FDeditor</string>

    <string name="text_share">Share</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>

    <string name="text_enter">Enter</string>
    <string name="text_export">Export</string>
    <string name="text_image_preview">Image preview</string>

    <string name="empty"></string>

    <string name="text_parentdirectory">Parent directory</string>

    <string name="hint_when_file_exists">File exists.Would you like to replace it ?</string>
    <string name="hint_file_saved">File saved</string>
    <string name="hint_file_save_failed">Failed to save file</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="save_file">Save file</string>
    <string name="open_file">Open file</string>
    <string name="enter_fille_name">Enter file name</string>

    <string name="text_about">About</string>
    <string name="text_documentations">Documentations</string>
    <string name="text_feynman_rule">Feynman Rule</string>
    <string name="a_vertex_is_already_there">A vertex is already there.</string>

</resources>
