<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/lineoperations_delete"
        android:title="@string/operations_delete" />
    <item
        android:id="@+id/lineoperations_convertion"
        android:title="@string/lineoperations_ConvertToline"/>
    <item
        android:id="@+id/lineoperations_flip"
        android:title="@string/lineoperations_flip" />
    <item
        android:id="@+id/lineopertions_split"
        android:title="@string/lineoperations_split" >
        <menu>
            <item
                android:id="@+id/splitlineoperation_2"
                android:title="@string/lineoperations_split_2"/>
            <item
                android:id="@+id/splitlineoperation_3"
                android:title="@string/lineoperations_split_3"/>
            <item
                android:id="@+id/splitlineoperation_4"
                android:title="@string/lineoperations_split_4"/>
        </menu>
    </item>
</menu>