<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_container"
        >

        <ImageView
            android:layout_width="@dimen/picture_preview_width"
            android:layout_height="@dimen/picture_preview_height"
            android:layout_marginTop="@dimen/layout_export_image_margin"
            android:layout_marginLeft="@dimen/layout_export_image_margin"
            android:layout_marginBottom="@dimen/layout_export_image_margin"
            android:layout_marginRight="@dimen/layout_export_image_margin"
            android:background="#FFFFFF"
            android:id="@+id/imgview_export_image"
            />

    </FrameLayout>

    <View
        android:layout_height="1px"
        android:layout_width="wrap_content"
        android:background="?android:attr/listDivider"
        android:layout_alignTop="@+id/buttons_export_img"

        android:layout_alignLeft="@+id/img_container"
        android:layout_alignStart="@+id/img_container"

        android:layout_alignRight="@+id/img_container"
        android:layout_alignEnd="@+id/img_container"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/img_container"
        android:layout_alignLeft="@+id/img_container"
        android:layout_alignStart="@+id/img_container"

        android:layout_alignRight="@+id/img_container"
        android:layout_alignEnd="@+id/img_container"
        android:id="@+id/buttons_export_img"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbox_item_background"
            android:id="@+id/export_img_btn_share"
            android:text="@string/text_share"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="#5d89ec"
            />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_weight="0"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbox_item_background"
            android:id="@+id/export_img_btn_save"
            android:text="@string/text_save"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="#5d89ec"
            />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_weight="0"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbox_item_background"
            android:id="@+id/export_img_btn_cancel"
            android:text="@string/text_cancel"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#5d89ec"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_image_preview"
        android:id="@+id/textView"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>